--- a/xbmc/platform/linux/powermanagement/CMakeLists.txt
+++ b/xbmc/platform/linux/powermanagement/CMakeLists.txt
@@ -1,8 +1,6 @@
-set(SOURCES CustomPowerSyscall.cpp
-            LinuxPowerSyscall.cpp)
+set(SOURCES LinuxPowerSyscall.cpp)
 
-set(HEADERS CustomPowerSyscall.h
-            FallbackPowerSyscall.h
+set(HEADERS FallbackPowerSyscall.h
             LinuxPowerSyscall.h)
 
 if(TARGET ${APP_NAME_LC}::DBus)
